--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ function checkTime(i) {
 All-
 </div>
     <br>
-    <a href="under.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
+    <a href="pachinko.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
      <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
  
@@ -202,7 +202,7 @@ All-
 Korean-
 </div>
     <br>
-   <a href="under.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
+   <a href="pachinko.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania">
